--- a/scss/main/_cards.scss
+++ b/scss/main/_cards.scss
@@ -11,40 +11,13 @@
             @media only screen and (max-width: 600px){
                 margin: 42px auto 0 12px;
             }
+            @media only screen and (max-height:750px){
+                margin: 8px auto 0 12px;
+            }
             span{
                 display: inline-block;
                 padding: 6px;
                 font-size: $f-tiny+0.2
-            }
-        }
-        .componente-boton-cerrar{
-            z-index: -1;
-            position: absolute;
-            right: 10px;
-            top: 10px;
-            width: 60px;
-            height: 60px;
-            opacity: 0;
-            pointer-events: none;
-            transition: all 0s 0.45s;
-            cursor: pointer;
-            &::before{
-                transform: rotate(45deg) translateX(100%);
-            }
-            &::after{
-                transform: rotate(-45deg) translateX(100%);
-            }
-            &::before,&::after{
-                content: "";
-                position: absolute;
-                left: 0;
-                top: 50%;
-                width: 100%;
-                height: 8px;
-                margin-top: -4px;
-                background: $parrafos;
-                opacity: 0;
-                transition: opacity 0s;
             }
         }
         strong,h3{
@@ -54,6 +27,10 @@
             @media only screen and (max-width: 600px){
                 font-size: $f-small;
                 margin-top: 42px;
+            }
+            @media only screen and (max-height:750px){
+                margin-top: 24px;
+                margin-bottom: 12px;
             }
         }
         h3{
@@ -73,6 +50,9 @@
                 font-size: $f-tiny+0.2;
                 margin: 42px 0;
             }
+            @media only screen and (max-height:750px){
+                margin: 12px 0;
+            }
         }
         .card-footer{
             display: flex;
@@ -84,6 +64,7 @@
             @media only screen and (max-width:600px){
                 justify-content: space-evenly;
                 align-items: center;
+                flex-wrap: wrap;
                 width: 100%;
                 margin:24px 0;
             }
@@ -97,18 +78,45 @@
                     font-size: 32px;
                     text-align: center;
                     button{
-                        @include btn-project(156px,64px);
+                        @include btn-project(156px,64px,$f-tiny);
+                        @media only screen and (max-width: 600px){
+                            @include btn-project(108px,48px,$f-tiny - 0.2)
+                        }
                         &.github{
-                            color: black;
+                            color: rgb(29, 29, 29);
                             background-color: rgb(223, 223, 223);
+                            &:hover{
+                                color:rgb(223, 223, 223);
+                                background-color:rgb(29, 29, 29) ;
+                            }
+                            &:active{
+                                color: lighten(rgb(223, 223, 223), 10%);
+                                background-color:lighten(rgb(29, 29, 29), 10%) ;
+                            }
                         }
                         &.laptop{
-                            color: nth($colores, 1 );
+                            color:$fondo;
                             background-color:nth($colores, 2 );
+                            &:hover{
+                                color: nth($colores, 2 );
+                                background-color: $fondo;
+                            }
+                            &:active{
+                                color: lighten(nth($colores, 2 ), 10%);
+                                background-color:lighten($fondo, 10%) ;
+                            }
                         }
                         &.figma{
                             color: #3d3e90;
                             background-color: #FD3258;
+                            &:hover{
+                                color: #FD3258;
+                                background-color:#3d3e90 ;
+                            }
+                            &:active{
+                                color: lighten(#FD3258, 10%);
+                                background-color:lighten(#3d3e90, 10%) ;
+                            }
                         }                     
                         span{
                             display: inline-block;
@@ -120,6 +128,9 @@
                         }
                         .bi{
                             font-size: 48px;
+                            @media only screen and (max-width:600px){
+                                font-size: 36px;
+                            }
                         }
                     }
                     
