--- a/scss/partials/_mixin.scss
+++ b/scss/partials/_mixin.scss
@@ -18,9 +18,9 @@
     align-items: center;
 }
 
-@mixin btn-project($width,$height){
+@mixin btn-project($width,$height,$size){
     margin:24px auto;
-    font-size: $f-tiny;
+    font-size: $size;
     border-radius: 6px;
     width: $width;
     height: $height;
@@ -29,9 +29,11 @@
     text-align: center;
     font-weight: 400;
     color: $borde-botones;
-    transition: all .5s;
+    transition: all .25s;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    cursor: pointer;
+
 }
