--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,60 @@ hr {
   background-color: #F1E7FF;
 }
 
+.loader-page {
+  position: fixed;
+  z-index: 25000;
+  background: #0B0217;
+  left: 0px;
+  top: 0px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+.loader-page::before {
+  content: "";
+  position: absolute;
+  border: 2px solid rgba(241, 231, 255, 0.6745098039);
+  width: 256px;
+  height: 256px;
+  padding: 4px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  border-left: 2px solid rgba(50, 150, 176, 0);
+  border-top: 2px solid rgba(50, 150, 176, 0);
+  animation: rotarload 1.5s linear infinite;
+  transform: rotate(0deg);
+}
+.loader-page::after {
+  content: "";
+  position: absolute;
+  border: 2px solid #F1E7FF;
+  width: 256px;
+  height: 256px;
+  padding: 4px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  border-left: 2px solid rgba(50, 150, 176, 0);
+  border-top: 2px solid rgba(50, 150, 176, 0);
+  animation: rotarload 1.5s ease-out infinite;
+  transform: rotate(0deg);
+}
+.loader-page img {
+  width: 25%;
+  height: 25%;
+}
+
+@keyframes rotarload {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .agradecimiento {
   display: flex;
   flex-direction: column;
