--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,700&display=swap');
-$fondo-cartas : #0b0217be;
-$fondo:#0B0217;
-$fondo-offcanvas:#1E0B38;
-$colores:#9D86DF,#7563AA;
-$parrafos:#F1E7FF;
-$h2:#C2B8D0;
-$fondo-botones:#3A2C5E;
-$borde-botones:#F1E7FF;
-$fondo-cartas:#21182D;
-$fondo-inputs:#130A1F;
+$fondo-cartas : #7ea2c5be;
+$offcanvas-shadow:#041a2b87;
+$fondo:#E5EBF1;
+$fondo-offcanvas:#092E4C;
+$colores:#A8C2DC,#1A5784;
+$parrafos:#154a70;
+$h2:darken(#A8C2DC,5%) ;
+$fondo-botones:#A8C2DC;
+$borde-botones:#1A5784;
+$fondo-inputs:#E5EBF1be;
 $font-boton:Helvetica;
 $font-texto:'Roboto','Quicksand',sans-serif;
 $font-H:'Roboto Flex', sans-serif;
