--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,700&display=swap');
 @import "base/vars";
 *,
 *:before,
@@ -36,3 +37,4 @@ hr{
 @import "main/projects";
 @import "main/aside";
 @import "main/footer";
+@import "main/curriculum"
