--- a/scss/main/_projects.scss
+++ b/scss/main/_projects.scss
@@ -111,7 +111,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(28, 1, 51, 0.7);
+    background: $fondo-cartas;
     opacity: 0;
     transition: opacity 0.5s;
     @media only screen and (max-width:415px){
@@ -265,7 +265,7 @@
     width: 100%;
   }
   .componente-index-back {
-    color: #2f3840;
+    color: #455d72;
     opacity: 0;
     transition: opacity 0.25s 0.25s;
   }
