Correccion mini error

--- a/scss/main/_header.scss
+++ b/scss/main/_header.scss
@@ -12,7 +12,7 @@
     }
 }
 header{
-    max-width: 1485px;
+    width: 100%;
     text-align: center;
     background-color: $fondo-offcanvas;
     height: 128px;
