--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ header nav {
   justify-content: space-around;
   align-items: center;
   height: 64px;
+  max-width: 100%;
 }
 header nav .nav-button {
   display: flex;
@@ -179,6 +180,11 @@ header nav ul {
   justify-content: space-evenly;
   align-items: center;
 }
+@media only screen and (min-width: 600px) {
+  header nav ul {
+    width: auto;
+  }
+}
 @media only screen and (max-width: 600px) {
   header nav ul {
     margin: 0;
@@ -186,7 +192,7 @@ header nav ul {
     justify-content: start;
     overflow-x: hidden;
     padding-top: 60px;
-    width: 0;
+    width: 0px;
     z-index: 10000;
     position: fixed;
     top: 0;
