--- a/scss/main/_header.scss
+++ b/scss/main/_header.scss
@@ -30,6 +30,7 @@ header{
         justify-content: space-around;
         align-items: center;
         height: 64px;
+        max-width: 100%;
         .nav-button{
             display: flex;
             flex-direction: column;
@@ -72,13 +73,16 @@ header{
             flex-direction: row;
             justify-content: space-evenly; 
             align-items: center;
+            @media only screen and (min-width:600px){
+                width: auto;
+            }
             @media only screen and (max-width:600px){
                 margin: 0;
                 flex-direction: column;
                 justify-content: start;
                 overflow-x: hidden;
                 padding-top: 60px;
-                width: 0;
+                width: 0px;
                 z-index: 10000;
                 position: fixed;
                 top: 0;
